@@ -2,14 +2,22 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'org.javamodularity.moduleplugin' version '1.8.7'
     id 'net.neoforged.licenser' version '0.7.2' apply false
-    id 'net.neoforged.gradleutils' version '[2.0.18,3)'
+    id 'com.diffplug.spotless' version '6.25.0' apply false
+    id 'net.neoforged.gradleutils' version "${gradleutils_version}"
+    id 'net.neoforged.gradleutils.spotless' version "${gradleutils_version}" apply false
 }
 
 changelog {
     disableAutomaticPublicationRegistration()
 }
 
-logger.lifecycle("FML version {}", gradleutils.getTagOffsetVersion())
+gradleutils.version {
+    branches {
+        suffixBranch()
+    }
+}
+
+println "Version: ${project.version = gradleutils.version}"
 
 allprojects {
     apply plugin: 'java-library'
@@ -20,10 +28,18 @@ allprojects {
     apply plugin: 'com.github.ben-manes.versions'
     apply plugin: 'org.javamodularity.moduleplugin'
     apply plugin: 'net.neoforged.licenser'
+    apply plugin: 'com.diffplug.spotless'
     apply plugin: 'net.neoforged.gradleutils'
+    apply plugin: 'net.neoforged.gradleutils.spotless'
+
+    gradleutils {
+        setupSigning(signAllPublications: true)
+    }
 
     group = 'net.neoforged.fancymodloader'
-    version = gradleutils.getTagOffsetVersion()
+    version = rootProject.version
+
+    spotlessUtils.configure(spotless)
 
     repositories {
         mavenCentral()
@@ -37,9 +53,6 @@ allprojects {
             name = 'Minecraft'
             url = 'https://libraries.minecraft.net'
         }
-
-        // TODO remove
-        mavenLocal()
     }
 
     dependencyUpdates.rejectVersionIf { isNonStable(it.candidate.version) }
@@ -47,17 +60,20 @@ allprojects {
     java {
         withSourcesJar()
         toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
+            languageVersion = JavaLanguageVersion.of(21)
         }
     }
 
     test {
         useJUnitPlatform()
+
+        // Needed by UnionFS
+        jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
     }
 }
 
 subprojects { subProject ->
-    subProject.version = gradleutils.getTagOffsetVersion()
+    subProject.version = rootProject.version
 
     jar {
         manifest.attributes(
@@ -66,9 +82,9 @@ subprojects { subProject ->
                 'Automatic-Module-Name' : "fml_${subProject.name.replace("-", "_")}",
                 'Specification-Title'   : "FML${subProject.name}",
                 'Specification-Vendor'  : 'NeoForged',
-                'Specification-Version' : "${subProject.version.split('\\.')[0]}",
+                'Specification-Version' : "${subProject.version.toString().split('\\.')[0]}",
                 'Implementation-Title'  : "FML $subProject.name",
-                'Implementation-Version': "${subProject.version.split('\\.')[0]}.${subProject.version.split('\\.')[1]}",
+                'Implementation-Version': "${subProject.version.toString().split('\\.')[0]}.${subProject.version.toString().split('\\.')[1]}",
                 'Implementation-Vendor' : 'NeoForged'
         )
 
@@ -101,20 +117,11 @@ subprojects { subProject ->
         }
 
         repositories {
-            maven gradleutils.getPublishingForgeMaven()
-        }
-    }
-
-    if (System.getenv('GPG_PRIVATE_KEY')) {
-        signing {
-            final signingKey = System.getenv('GPG_PRIVATE_KEY') ?: ''
-            final signingPassword = System.getenv('GPG_KEY_PASSWORD') ?: ''
-            useInMemoryPgpKeys(signingKey, signingPassword)
-            sign publishing.publications.maven
+            maven gradleutils.publishingMaven
         }
     }
 
     changelog {
-        fromTag "1.0"
+        from "1.0"
     }
 }
